--- a/Public/html/FriendRequest.html
+++ b/Public/html/FriendRequest.html
@@ -100,6 +100,11 @@
                         <a href="addFriends.html"><i class="fas fa-user-plus user"></i> <span>Add Friend</span> </a>
 
                     </li>
+                    <li>
+                        <a href="ChatRoomList.html"><i class="fas fa-user-plus user"></i> <span>Chat Rooms</span>
+                        </a>
+
+                    </li>
                 </ul>
             </div>
         </section>
@@ -208,8 +213,10 @@
                             $('[data-toggle="tooltip"]').tooltip()
                         }
                     })
-
+                $('[data-toggle="tooltip"]').tooltip()
             }
+
+
         )
 
 
