--- a/Public/html/addFriends.html
+++ b/Public/html/addFriends.html
@@ -99,6 +99,11 @@
                                 Friend</span> </a>
 
                     </li>
+                    <li>
+                        <a href="ChatRoomList.html"><i class="fas fa-user-plus user"></i> <span>Chat Rooms</span>
+                        </a>
+
+                    </li>
                 </ul>
             </div>
         </section>
