--- a/Public/index.html
+++ b/Public/index.html
@@ -141,21 +141,21 @@
                     <div class="form-group">
                         <label for="firstname">First Name</label>
                         <input type="text" name="firstname" class="form-control" id="firstname"
-                            placeholder="Enter Full Name Here">
+                            placeholder="Enter firstname here">
                         <small class="form-text text-muted">Must 2-20 characters long
                         </small>
                     </div>
                     <div class="form-group">
                         <label for="lastname">Last Name</label>
                         <input type="text" name="lastname" class="form-control" id="lastname"
-                            placeholder="Enter Full Name Here">
+                            placeholder="Enter lastname here">
                         <small class="form-text text-muted">Must 2-20 characters long
                         </small>
                     </div>
                     <div class="form-group">
                         <label for="phone">Phone Number</label>
                         <input type="text" name="phone" class="form-control" id="phone"
-                            placeholder="Enter Valid Phone Number">
+                            placeholder="Enter valid phone number">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your number with anyone
                             else.</small>
                     </div>
