--- a/Public/html/addFriends.html
+++ b/Public/html/addFriends.html
@@ -35,7 +35,7 @@
 
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#" id="link">Tokyo ChatApp</a>
+            <a class="navbar-brand" href="#" id="link">Add Friends</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -51,46 +51,31 @@
         </nav>
 
     </header>
-    <main class="main">
-        <section class="sidenav" id="pInfo">
-            <div class="card">
-                <h6>Account Information</h6>
-                <div class="image-wrapper">
-                    <img src="../img/login_icon.png" alt="Profile Image" class="smaller-image">
-
-                </div>
-                <ul>
-                    <li class="username">
-                        <span> Profile Name</span>
-                    </li>
-                    <li class="userdes">
-                        <span> Profile Description</span>
-                    </li>
-                    <li class="userLoc">
-                        <span>Profile Location</span>
-                    </li>
-                    <li class="userAge">
-                        <span>Profile Age</span>
-                    </li>
-                </ul>
-
-            </div>
-        </section>
-        <section class="sidenav" id="menu">
-            <div class="card links">
+    <main class="mainT">
+        <span id="menuIcon">&#9776; Menu</span>
+        <section id="newSide">
+            <span class="closeNav">&times;</span>
+            <div class="divMenu">
                 <h4>Menu</h4>
                 <ul>
                     <li>
-                        <a href="userPage.html"><i class="far fa-comment-alt user"></i> <span>Chats</span> </a>
+                        <a href="userPage.html"><i class="far fa-comment-alt user"></i>
+                            <span>Chats</span> </a>
 
                     </li>
                     <li>
-                        <a href="friends.html"><i class="fas fa-user-friends user"></i>
+                        <a href="friends.html" class="friend-link"><i class="fas fa-user-friends user"></i>
                             <span>Friends</span> </a>
 
                     </li>
                     <li>
-                        <a href="FriendRequest.html"><i class="fas fa-user-clock user"></i> <span>Friend Requests</span>
+                        <a href="ChatRoomList.html"><i class="fas fa-users user"></i> <span>Chat Rooms</span>
+                        </a>
+
+                    </li>
+                    <li>
+                        <a href="FriendRequest.html"><i class="fas fa-user-clock user"></i> <span>Friend
+                                Requests</span>
                         </a>
 
                     </li>
@@ -100,14 +85,15 @@
 
                     </li>
                     <li>
-                        <a href="ChatRoomList.html"><i class="fas fa-user-plus user"></i> <span>Chat Rooms</span>
+                        <a href="editProfile.html"><i class="fas fa-user-circle user"></i> <span>Edit Profile</span>
                         </a>
 
                     </li>
                 </ul>
             </div>
+
         </section>
-        <section id="content" class="card">
+        <section class="card new">
             <div class="friends-container">
                 <ul class="list-group list-group-flush" id="friendList">
 
