--- a/Public/html/editProfile.html
+++ b/Public/html/editProfile.html
@@ -25,17 +25,17 @@
                 <h3> Tokyo Chat App</h3>
             </div>
 
-            <div id="contactDetails">
+            <!-- <div id="contactDetails">
                 <ul>
                     <li class="cont"><a href="#"><i class="fab fa-facebook"></i> <span>Facebook</span></a></li>
                     <li class="cont"><a href="#"><i class="fab fa-twitter"></i> <span>Twitter</span></a></li>
                     <li class="cont"><a href="#"><i class="fab fa-github"></i> <span>GitHub</span></a></li>
                 </ul>
-            </div>
+            </div> -->
 
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#" id="link">Tokyo ChatApp</a>
+            <a class="navbar-brand" href="#" id="link">Profile Settings</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
