--- a/Public/html/userPage.html
+++ b/Public/html/userPage.html
@@ -25,17 +25,17 @@
                 <h3> Tokyo Chat App</h3>
             </div>
 
-            <div id="contactDetails">
+            <!-- <div id="contactDetails">
                 <ul>
                     <li class="cont"><a href="#"><i class="fab fa-facebook"></i> <span>Facebook</span></a></li>
                     <li class="cont"><a href="#"><i class="fab fa-twitter"></i> <span>Twitter</span></a></li>
                     <li class="cont"><a href="#"><i class="fab fa-github"></i> <span>GitHub</span></a></li>
                 </ul>
-            </div>
+            </div> -->
 
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#" id="link">Tokyo ChatApp</a>
+            <a class="navbar-brand" href="#" id="link">Chats</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -51,34 +51,11 @@
         </nav>
 
     </header>
-    <main class="main">
-        <section class="sidenav" id="pInfo">
-            <div class="card">
-                <h6>Account Information</h6>
-                <div class="image-wrapper">
-                    <img src="../img/login_icon.png" alt="Profile Image" class="smaller-image">
-
-                </div>
-                <ul>
-                    <li class="username">
-                        <span> Profile Name</span>
-                    </li>
-                    <li class="userdes">
-                        <span> Profile Description</span>
-                    </li>
-                    <li class="userLoc">
-                        <span>Profile Location</span>
-                    </li>
-                    <li class="userAge">
-
-                        <span>Profile Age</span>
-                    </li>
-                </ul>
-
-            </div>
-        </section>
-        <section class="sidenav" id="menu">
-            <div class="card links">
+    <main class="mainT">
+        <span id="menuIcon">&#9776; Menu</span>
+        <section id="newSide">
+            <span class="closeNav">&times;</span>
+            <div class="divMenu">
                 <h4>Menu</h4>
                 <ul>
                     <li>
@@ -92,7 +69,13 @@
 
                     </li>
                     <li>
-                        <a href="FriendRequest.html"><i class="fas fa-user-clock user"></i> <span>Friend Requests</span>
+                        <a href="ChatRoomList.html"><i class="fas fa-users user"></i> <span>Chat Rooms</span>
+                        </a>
+
+                    </li>
+                    <li>
+                        <a href="FriendRequest.html"><i class="fas fa-user-clock user"></i> <span>Friend
+                                Requests</span>
                         </a>
 
                     </li>
@@ -101,14 +84,15 @@
 
                     </li>
                     <li>
-                        <a href="ChatRoomList.html"><i class="fas fa-user-plus user"></i> <span>Chat Rooms</span>
+                        <a href="editProfile.html"><i class="fas fa-user-circle user"></i> <span>Edit Profile</span>
                         </a>
 
                     </li>
                 </ul>
             </div>
+
         </section>
-        <section id="content" class="card">
+        <section class="card new">
             <div class="empty">
                 <p>OOps!! you dont have any chats yet</p>
                 <button class="btn btn-success">Add friends to chats</button>
@@ -171,7 +155,7 @@
 
                 $.ajax({
                         method: 'GET',
-                        url: `http://localhost:3000/chats?chatId=${userDetails.id}`
+                        url: `http://localhost:3000/chats?userId=${userDetails.id}&chatId=${userDetails.id}`
                     })
                     .done(function (result) {
                         if (result.length) {
@@ -188,7 +172,7 @@
                                     <a href="chatPage.html" class="chats"
                                         onclick="getChatId(${result.id},'${resName}',${data.id})"><img
                                             src="../img/login_icon.png" alt="..."
-                                            class="profile-img">${resName}</a>
+                                            class="profile-img">${resName}2</a>
                                     <span class="badge badge-primary badge-pill">14</span>
                                 </li>`)
                                     })
@@ -208,10 +192,10 @@
         }
 
 
-        $(".btn-success").click(e => {
-            e.preventDefault();
-            $(".friend-link")[0].click()
-        })
+        // $(".card").click(function (e) {
+        //     e.preventDefault();
+        //     $("#newSide").css('width', '0');
+        // })
 
         function getTime(res) {
             let tRes, hour, min, d;
